--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
     <string name="app_name">Genshin-Impact-Character</string>
-    <string name="the_pretties_character_of_the_year">The Pretties Character Of The Year</string>
+    <string name="the_pretties_character_of_the_year">The Prettiest Character Of The Year</string>
     <string name="content_prettiest_character_banner">Prettiest Character Banner</string>
     <string name="eula_lawrance">Eula Lawrance</string>
     <string name="mondstadt">Mondstadt</string>
+    <string name="genshin_impact_character">Genshin Impact Character</string>
 </resources>
