sosmed label component

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="eula_lawrance">Eula Lawrance</string>
     <string name="mondstadt">Mondstadt</string>
     <string name="genshin_impact_character">Genshin Impact Character</string>
+    <string name="my_name">Azkia Ajmal Fairuz</string>
+    <string name="about_me">I\'m a Front End Developer with 1 years of profesional experience</string>
 </resources>
