--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="linkedin">LinkedIn</string>
     <string name="thanks_for_come_to_my_bio">Thanks For Come To My Bio</string>
     <string name="failed_get_character">Failed Get Character</string>
+    <string name="detail">Detail</string>
 </resources>
